Calibration seems to be working quite well now.

--- a/software/spiffs_files/html/ssi/header.html
+++ b/software/spiffs_files/html/ssi/header.html
@@ -46,6 +46,10 @@
                         <li class="pure-menu-item">
                             <a class="pure-menu-link" href="sockets.shtml">Sockets</a>
                         </li>
+                        <li class="pure-menu-item">
+                            <a class="pure-menu-link" href="calibrations.shtml">Calibrations</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
