Elliptic curve cert.

--- a/software/spiffs_files/html/ssi/header.html
+++ b/software/spiffs_files/html/ssi/header.html
@@ -35,7 +35,7 @@
                             <a class="pure-menu-link" href="ota.shtml">OTA Upgrade</a>
                         </li>
                         <li class="pure-menu-item">
-                            <a class="pure-menu-link" href="reboot.shtml">Reboot</a>
+                            <a class="pure-menu-link" href="reboot.shtml">Restart</a>
                         </li>
                         <li class="pure-menu-item">
                             <a class="pure-menu-link" href="settings.shtml">Settings</a>
