--- a/software/data_files/html/calibrations.html
+++ b/software/data_files/html/calibrations.html
@@ -1,4 +1,3 @@
-
 <!--#include file="ssi/header.html"-->
 <link href="css/switch.css" rel="stylesheet">
 
@@ -9,52 +8,68 @@
     </div>
     <div class="content">
         <h2 class="content-subhead">Current Calibrations</h2>
-        <h3 >Calibrations related to the ACS712 current sensors and related curcuitry</h3>
+        <h3>Calibrations related to the ACS712 current sensors and related curcuitry</h3>
         <div id="current_calibs"></div>
         <h3>Recalibrate Current Sensors</h3>
         <p> Re-perform the calibration.. This takes about ten seconds. Preferable this should be done with nothing plugged in to the sockets.</p>
-        <form method="POST" action="/api/v1/post/recalib_current">
+        <form method="POST" action="/api/v1/post/recalib_current" id="formRecalibrate" >
             <input type="submit" class="pure-button button-warning" value="Recalibrate">
         </form>
 
-</div>
+    </div>
 </div>
 <!--#include file="ssi/com_js.html"-->
 
+<script src="js/jquery.serialize-object.min.js"></script>
 
 
 <script language="javascript" type="text/javascript">
-    $( document ).ready(function update_checkbox() {
-      $.ajax({
-        url: '/api/v1/get/current_calibrations',
-        method: 'POST',
-        dataType: 'json',
-        data: {},
-        success: function(json) {
-            //Create table header
+    $(document).ready(function() {
 
-            var ccalib_str = "<table class='pure-table'><thead> <tr> <th>Channel</th> <th>Bias On</th>";
-            ccalib_str += "<th>Stddev On</th> <th>Bias Off</th> <th>Stddev Off</th> <th>Conversion (1/A)</th>";
-            ccalib_str +=  "<th>Valid</th> </tr></thead><tbody>";
-            for(i = 0; i < parseInt(json.count); i++ )
-            {
-                var calib_name = "ccalib" + i;
-                ccalib_str += "<tr>";
-                ccalib_str += "<td>" + json[calib_name].id + "</td>";
-                ccalib_str += "<td>" + json[calib_name].bias_on + "</td>";
-                ccalib_str += "<td>" + json[calib_name].stddev_on + "</td>";
-                ccalib_str += "<td>" + json[calib_name].bias_off + "</td>";
-                ccalib_str += "<td>" + json[calib_name].stddev_off + "</td>";
-                ccalib_str += "<td>" + json[calib_name].conversion + "</td>";
-                ccalib_str += "<td>" + json[calib_name].calibrated + "</td>";
-                ccalib_str += "</tr>";
+        $.ajax({
+            url: '/api/v1/get/current_calibrations',
+            method: 'GET',
+            dataType: 'json',
+            data: {},
+            success: function(json) {
+                //Create table header
 
-            }
-            ccalib_str += "</tbody></table>"
+                var ccalib_str = "<table class='pure-table'><thead> <tr> <th>Channel</th> <th>Bias On</th>";
+                ccalib_str += "<th>Stddev On</th> <th>Bias Off</th> <th>Stddev Off</th> <th>Conversion (1/A)</th>";
+                ccalib_str += "<th>Valid</th> </tr></thead><tbody>";
+                for (i = 0; i < parseInt(json.count); i++) {
+                    var calib_name = "ccalib" + i;
+                    ccalib_str += "<tr>";
+                    ccalib_str += "<td>" + json[calib_name].id + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].bias_on + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].stddev_on + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].bias_off + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].stddev_off + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].conversion + "</td>";
+                    ccalib_str += "<td>" + json[calib_name].calibrated + "</td>";
+                    ccalib_str += "</tr>";
 
-            $('#current_calibs').html(ccalib_str);
-        },
-      });
-  });
+                }
+                ccalib_str += "</tbody></table>"
+
+                $('#current_calibs').html(ccalib_str);
+            },
+        });
+
+        // Submit recalibrate form
+        $('form#formRecalibrate').submit(function(e) {
+            e.preventDefault();
+            $.ajax({
+                url: '/api/v1/post/recalib_current',
+                type: 'POST',
+                dataType: 'json',
+                contentType: "application/json; charset=utf-8",
+                data: $('form#formRecalibrate').serializeJSON(),
+                success: function() {
+                    console.log("Success");
+                }
+            });
+        });
+    });
 </script>
 <!--#include file="ssi/footer.html"-->
