--- a/software/data_files/html/ota.html
+++ b/software/data_files/html/ota.html
@@ -70,8 +70,8 @@
 
 </div>
 
-<script src="js/ui.js"></script>
-<script src="js/jquery.min.js"></script>
+<!--#include file="ssi/com_js.html"-->
+
 <script>
 
     function do_upload(f) {
