--- a/software/data_files/html/settings.html
+++ b/software/data_files/html/settings.html
@@ -73,9 +73,7 @@
 
         </form>
 
-        <script src="js/ui.js"></script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.serialize-object.min.js"></script>
+        <!--#include file="ssi/com_js.html"-->
 
         <!-- Fetch values from the server -->
         <script language="javascript" type="text/javascript">
