--- a/software/data_files/html/ssi/header.html
+++ b/software/data_files/html/ssi/header.html
@@ -49,6 +49,12 @@
                         <li class="pure-menu-item">
                             <a class="pure-menu-link" href="calibrations.html">Calibrations</a>
                         </li>
+                        <li class="pure-menu-item">
+                            <a class="pure-menu-link" href="login.html">Login</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a class="pure-menu-link" href="logout.html">Logout</a>
+                        </li>
 
                     </ul>
                 </div>
