--- a/software/data_files/html/ssi/com_js.html
+++ b/software/data_files/html/ssi/com_js.html
@@ -2,3 +2,5 @@
 
 <script src="js/ui.js"></script>
 <script src="js/jquery.min.js"></script>
+<script src="js/error_handler.js"></script>
+<script src="js/jquery.serialize-object.min.js"></script>
