--- a/software/data_files/html/ssi/header.html
+++ b/software/data_files/html/ssi/header.html
@@ -50,6 +50,9 @@
                             <a class="pure-menu-link" href="calibrations.html">Calibrations</a>
                         </li>
                         <li class="pure-menu-item">
+                            <a class="pure-menu-link" href="device_info.html">Device Info</a>
+                        </li>
+                        <li class="pure-menu-item">
                             <a class="pure-menu-link" href="login.html">Login</a>
                         </li>
                         <li class="pure-menu-item">
