--- a/software/data_files/html/ssi/com_js.html
+++ b/software/data_files/html/ssi/com_js.html
@@ -4,3 +4,4 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/error_handler.js"></script>
 <script src="js/jquery.serialize-object.min.js"></script>
+<script src="js/toast.js"></script>
