--- a/software/data_files/html/success.html
+++ b/software/data_files/html/success.html
@@ -5,6 +5,8 @@
     <div class="header">
         <h1>Success!</h1>
         <h2>The firmware was sucessfully updated</h2>
+        <h2>You need to restart the device to boot into the new firmware</h2>
+
             </div>
         </div>
 
