--- a/software/data_files/html/sockets.html
+++ b/software/data_files/html/sockets.html
@@ -22,6 +22,7 @@
 <script language="javascript" type="text/javascript">
 
 var loaded = 0;
+var last_state = null;
 $( document ).ready(function update_checkbox() {
         $.ajax({
                 url: '/api/v1/get/switch_state',
@@ -30,6 +31,19 @@ $( document ).ready(function update_checkbox() {
                 cache:false,
                 data: {},
                 success: function(json) {
+                        if(last_state != null)
+                        {
+                            for(i = 0; i < parseInt(json.count); i++ ){
+                                var switch_name = "switch" + i;
+                                if(parseInt(json[switch_name].state) != parseInt(last_state[switch_name].state))
+                                {
+                                    new_state = parseInt(json[switch_name].state) ? "On" : "Off";
+                                    var t = new Toast();
+                                    t.snackShow(switch_name + " was turned " + new_state + ".", 'info');
+                                }
+                            }
+                        }
+                        last_state = json;
 
                         if ($('.input-checkbox').length > 0){
                                 for(i = 0; i < parseInt(json.count); i++ ){
