--- a/software/data_files/html/ssi/header.html
+++ b/software/data_files/html/ssi/header.html
@@ -14,6 +14,8 @@
     <!-- Custom CSS -->
     <link href="css/side-menu.css" rel="stylesheet">
 
+    <link href="css/snacker.css" rel="stylesheet">
+
 </head>
 
 <body>
